--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--copywrite 2020-->
 <head>
 	<title>example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
