Makign chagnes to simple html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--copywrite 2020-->
+<!--copywrite changed! 2020-->
 <head>
-	<title>example website</title>
+	<title>example website 2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		  this is a new thing	
 		</p>
 	</main>
 	<footer class="container">
