Making conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--copywrite 2020-->
 <head>
-	<title>example website</title>
+	<title>A very respectufl website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		 I'm not sur whta goes here
+		 I'll this dtnos noe
 		</p>
 	</main>
 	<footer class="container">
