change in simple before rebase

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!--copywrite changed! 2020-->
+<!--copywrite changed! 2020
+adding changes before rebase-->
 <head>
 	<title>A very respectufl website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
