mb conflicint changes brewing

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,10 @@ adding changes before rebase-->
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		some more changes
+		<p>&copy; Company 2014
+			will be here
+		</p>
 	</footer>
 </body>
 </html>
