--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--copywrite changed! 2020
-adding changes before rebase-->
+<!--copywrite changed! 2020-->
 <head>
 	<title>A very respectufl website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
