--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--copywrite changed! 2020-->
 <head>
-	<title>A very respectufl second  website</title>
+	<title>A very respectufl second third website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
